--- a/circFit/circFit/Base.lproj/Main.storyboard
+++ b/circFit/circFit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ZXF-WE-L8v">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2qX-ns-cEn">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -8,6 +8,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Saved Workouts Navigation Controller-->
+        <scene sceneID="BHZ-pX-SiP">
+            <objects>
+                <navigationController storyboardIdentifier="SavedWorkoutsNavigationController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2qX-ns-cEn" customClass="SavedWorkoutsNavigationController" customModule="circFit" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OsR-ak-gEZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="ZXF-WE-L8v" kind="relationship" relationship="rootViewController" id="u3i-MJ-zAG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gag-bG-iOC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1806" y="449"/>
+        </scene>
         <!--Saved Workouts View Controller-->
         <scene sceneID="YHh-Yr-ctK">
             <objects>
@@ -109,6 +125,7 @@
                             <constraint firstItem="6e8-jB-nw3" firstAttribute="top" secondItem="zTB-nS-uQ2" secondAttribute="bottom" id="zKg-e3-IFb"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="MwK-tY-XgK"/>
                     <connections>
                         <outlet property="createWorkoutView" destination="rno-Q9-Zia" id="dy2-pP-Amr"/>
                         <outlet property="noSavedView" destination="hdn-ZI-Bmp" id="Mlm-Xi-kBK"/>
@@ -291,7 +308,7 @@
             <objects>
                 <viewController id="A6H-QA-qpx" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OE3-jX-teF">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="582"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="538"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
