--- a/circFit/circFit/Base.lproj/Main.storyboard
+++ b/circFit/circFit/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gag-bG-iOC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1806" y="449"/>
+            <point key="canvasLocation" x="-1807" y="421"/>
         </scene>
         <!--Saved Workouts View Controller-->
         <scene sceneID="YHh-Yr-ctK">
@@ -226,7 +226,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CircuitCollectionViewCell" id="lX4-52-mRV" customClass="CircuitCollectionViewCell" customModule="circFit" customModuleProvider="target">
-                                        <rect key="frame" x="0.5" y="0.0" width="374" height="63"/>
+                                        <rect key="frame" x="1" y="0.0" width="374" height="63"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="63"/>
@@ -279,11 +279,33 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="xEb-aF-UxN"/>
                                 </connections>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3lY-7l-qui" userLabel="Start Workout View">
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rmn-C7-0GC">
+                                        <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
+                                        <state key="normal" title="Start">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="rmn-C7-0GC" firstAttribute="width" secondItem="3lY-7l-qui" secondAttribute="width" id="3ZZ-WU-1Xv"/>
+                                    <constraint firstItem="rmn-C7-0GC" firstAttribute="height" secondItem="3lY-7l-qui" secondAttribute="height" id="8bG-bG-grh"/>
+                                    <constraint firstAttribute="height" constant="65" id="FAQ-YR-Yef"/>
+                                    <constraint firstItem="rmn-C7-0GC" firstAttribute="centerX" secondItem="3lY-7l-qui" secondAttribute="centerX" id="Fjd-G1-0pv"/>
+                                    <constraint firstItem="rmn-C7-0GC" firstAttribute="centerY" secondItem="3lY-7l-qui" secondAttribute="centerY" id="VC5-UZ-U6m"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="OrL-Nd-Yxy" secondAttribute="bottom" id="4gh-eo-zHR"/>
                             <constraint firstItem="OrL-Nd-Yxy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4sp-E8-hrC"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3lY-7l-qui" secondAttribute="bottom" id="51q-6a-dyv"/>
+                            <constraint firstItem="3lY-7l-qui" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="OnR-Uv-Sqw"/>
+                            <constraint firstItem="3lY-7l-qui" firstAttribute="top" secondItem="OrL-Nd-Yxy" secondAttribute="bottom" id="XEq-2C-qND"/>
+                            <constraint firstItem="3lY-7l-qui" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="YWo-nW-dQ5"/>
                             <constraint firstAttribute="trailing" secondItem="zp2-Uh-rOR" secondAttribute="trailing" id="lHC-l0-MQf"/>
                             <constraint firstItem="zp2-Uh-rOR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lZD-fi-uSX"/>
                             <constraint firstItem="OrL-Nd-Yxy" firstAttribute="top" secondItem="zp2-Uh-rOR" secondAttribute="bottom" id="xtP-KP-113"/>
