--- a/circFit/circFit/Timer screen.storyboard
+++ b/circFit/circFit/Timer screen.storyboard
@@ -6,10 +6,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Timer Screen View Controller-->
         <scene sceneID="Fld-iH-14x">
             <objects>
-                <viewController id="Md5-8Q-GFd" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TimerScreenViewController" id="Md5-8Q-GFd" customClass="TimerScreenViewController" customModule="circFit" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="LfG-Cz-tNb"/>
                         <viewControllerLayoutGuide type="bottom" id="w22-9G-6mS"/>
@@ -23,16 +23,29 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LIr-bs-f9u">
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Close"/>
+                                <connections>
+                                    <action selector="closeButtonPressed:" destination="Md5-8Q-GFd" eventType="touchUpInside" id="RWd-RT-UyO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="LIr-bs-f9u" firstAttribute="top" secondItem="LfG-Cz-tNb" secondAttribute="bottom" id="7w2-pp-ED0"/>
                             <constraint firstItem="cGt-7T-A7c" firstAttribute="centerY" secondItem="plV-C3-P7a" secondAttribute="centerY" id="Ckq-8h-c09"/>
                             <constraint firstItem="cGt-7T-A7c" firstAttribute="centerX" secondItem="plV-C3-P7a" secondAttribute="centerX" id="cJp-WN-Fi6"/>
                             <constraint firstItem="cGt-7T-A7c" firstAttribute="width" secondItem="plV-C3-P7a" secondAttribute="width" id="s69-hb-SQ8"/>
+                            <constraint firstAttribute="trailing" secondItem="LIr-bs-f9u" secondAttribute="trailing" constant="8" id="w4U-C2-eDx"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="gqg-lF-0h9" kind="unwind" identifier="unwindToCreateAWorkoutScreen" unwindAction="unwindToCreateAWorkoutScreenWithSegue:" id="giD-Ae-YtX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fkP-lQ-FvO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="gqg-lF-0h9" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="140" y="81"/>
         </scene>
